Home title with custom font

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,10 @@ flutter:
   assets:
   - assets/
 
+  fonts:
+    - family: Kalam
+      fonts:
+      - asset: fonts/Kalam-Regular.ttf
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.io/assets-and-images/#resolution-aware.
