--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
 
     <application
         android:name="io.flutter.app.FlutterApplication"
-        android:label="instory"
+        android:label="Instory"
         android:icon="@mipmap/ic_launcher">
         <activity
             android:name=".MainActivity"
